--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </td>
 <td id="layout-content">
 <head>
-<link rel="shortcut icon" href="favicon.ico"/>
-    </head><table class="imgtable"><tr><td>
+    <link rel="shortcut icon" href="favicon.ico"/>
+</head><table class="imgtable"><tr><td>
 <img src="profile11.png" alt="alt text" width="170px" />&nbsp;</td>
 <td align="left"><p><span style="font-weight: bold; font-size: 125%; line-height: 2.0;">Daniel Khashabi </span> <br />
 Assistant Professor,  <a href="https://www.cs.jhu.edu/">Department of Computer Science</a>,
@@ -127,6 +127,10 @@ aligned with human values—enabling trustworthy, AI-driven discovery.</p>
 </body>
 </html>
 </div></div>
+<ul>
+<li><p><a href="https://ai.jhu.edu/careers/postdoctoral-fellowship-program/"><b>Postdoc positions</b></a> &ndash; applications due January 23, 2026.</p>
+</li>
+</ul>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
 <li><p>2025, JHU  MLxAstro/Cosmo Meeting (<a href="https://danielkhashabi.com/files/2025_astro_talk/2025-astro_talk.pdf">slides</a>)</p>
@@ -219,6 +223,10 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2511.17908"><b>Principled Context Engineering for RAG: Statistical Guarantees via Conformal Prediction.</b></a>  <br />    Debashish Chakraborty, <a href="https://scholar.google.com/citations?user=JVqgs4gAAAAJ&amp;hl=en&amp;oi=ao"><font color="Black"> Eugene Yang</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://hltcoe.jhu.edu/researcher/dawn-lawrie/"><font color="Black"> Dawn Lawrie</font></a> and <a href="https://scholar.google.com/citations?user=M3BSiiQAAAAJ&amp;hl=en"><font color="Black"> Kevin Duh</font></a>. <br />   <font color="DarkRed">European Conference on Information Retrieval (ECIR) </font>, 2026. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://pubmed.ncbi.nlm.nih.gov/39868292/"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="DarkRed">The Lancet Digital Health</font>, 2026. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a> <a href="https://www.datatecnica.com/blog/can-gpt-45-claude-37-and-gemini-20-keep-up-with-biomedical-research-a-benchmark-update">[blog]</a></font></p>
 </li>
 </ul>
@@ -271,7 +279,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2505.18148"><b>Lost in the Haystack: Smaller Needles are More Difficult for LLMs to Find.</b></a>  <br />    Owen Bianchi, Mathew J. Koretsky, Maya Willey, Chelsea X. Alvarado, Tanay Nayak, Adi Asija, Nicole Kuznetsov, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.18148</font>, 2025. <font size=-1><a href="https://github.com/NIH-CARD/LostInTheHaystack">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2505.18148"><b>Hidden in the Haystack: Smaller Needles are More Difficult for LLMs to Find.</b></a>  <br />    Owen Bianchi, Mathew J. Koretsky, Maya Willey, Chelsea X. Alvarado, Tanay Nayak, Adi Asija, Nicole Kuznetsov, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.18148</font>, 2025. <font size=-1><a href="https://github.com/NIH-CARD/LostInTheHaystack">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -279,7 +287,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2504.10284"><b>Can LLMs Generate Tabular Summaries of Science Papers? Rethinking the Evaluation Protocol.</b></a>  <br />    <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://www.cse.ust.hk/~yqsong/"><font color="Black"> Yangqiu Song</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.10284</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/arXiv2Table">[data]</a> <a href="https://danielkhashabi.com/files/arxiv2table/Arxiv2Table_Presentation_v4.pdf">[slides]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2504.10284"><b>Can LLMs Generate Tabular Summaries of Science Papers? Rethinking the Evaluation Protocol.</b></a>  <br />    <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://www.cse.ust.hk/~yqsong/"><font color="Black"> Yangqiu Song</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.10284</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/arXiv2Table">[data]</a> <a href="https://danielkhashabi.com/files/arxiv2table/Arxiv2Table_Presentation_v4.pdf">[slides]</a> <a href="https://danielkhashabi.com/files/arxiv2table/Arxiv2Table_Presentation_v5.pdf">[slides2]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -303,7 +311,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2508.19221"><b>Evaluating the Evaluators: Are readability metrics good measures of readability?</b></a>  <br />    <a href="https://isabelcachola.com/"><font color="Black"> Isabel Cachola</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Mark Dredze. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/eval-the-eval-readability">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2508.19221"><b>Evaluating the Evaluators: Are readability metrics good measures of readability?</b></a>  <br />    <a href="https://isabelcachola.com/"><font color="Black"> Isabel Cachola</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~mdredze/"><font color="Black"> Mark Dredze</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/eval-the-eval-readability">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -652,7 +660,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-14 12:23:04 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-02 13:42:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
