--- a/index.html
+++ b/index.html
@@ -78,9 +78,13 @@ aligned with human values—enabling trustworthy, AI-driven discovery.</p>
 </head>
 <body>
 
-  <p onclick="toggleInfo()" class="link-lookalike">Here is some information for prospective students and visitors.</p>
+  <p>
+    <strong>
+      Here is some information for prospective students and visitors:
+    </strong>
+  </p>
 
-  <div id="info-content">
+<!--  <div id="info-content">-->
     <p>
       Due to the large number of emails I receive, I cannot respond to every email individually.
       Please review the information below before contacting me.
@@ -115,7 +119,7 @@ aligned with human values—enabling trustworthy, AI-driven discovery.</p>
         </em>
       </li>
     </ul>
-  </div>
+<!--  </div>-->
 
   <script>
     function toggleInfo() {
@@ -223,6 +227,10 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2510.18633"><b>Query Decomposition for RAG: Balancing Exploration-Exploitation.</b></a>  <br />    Roxana Petcu, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Evangelos Kanoulas, Maarten de Rijke, <a href="https://hltcoe.jhu.edu/researcher/dawn-lawrie/"><font color="Black"> Dawn Lawrie</font></a> and <a href="https://scholar.google.com/citations?user=M3BSiiQAAAAJ&amp;hl=en"><font color="Black"> Kevin Duh</font></a>. <br />   <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2026. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2511.17908"><b>Principled Context Engineering for RAG: Statistical Guarantees via Conformal Prediction.</b></a>  <br />    Debashish Chakraborty, <a href="https://scholar.google.com/citations?user=JVqgs4gAAAAJ&amp;hl=en&amp;oi=ao"><font color="Black"> Eugene Yang</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://hltcoe.jhu.edu/researcher/dawn-lawrie/"><font color="Black"> Dawn Lawrie</font></a> and <a href="https://scholar.google.com/citations?user=M3BSiiQAAAAJ&amp;hl=en"><font color="Black"> Kevin Duh</font></a>. <br />   <font color="DarkRed">European Conference on Information Retrieval (ECIR) </font>, 2026. <font size=-1></font></p>
 </li>
 </ul>
@@ -236,10 +244,6 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2510.20091"><b>CreativityPrism: A Holistic Benchmark for Large Language Model Creativity.</b></a>  <br />    Zhaoyi Joey Hou, Bowei Alvin Zhang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Bhiman Kumar Baghel, Anneliese Brei, <a href="https://gloriaximinglu.github.io/"><font color="Black"> Ximing Lu</font></a>, <a href="http://www.meng-jiang.com/"><font color="Black"> Meng Jiang</font></a>, <a href="https://fabrahman.github.io/"><font color="Black"> Faeze Brahman</font></a>, Snigdha Chaturvedi, Haw-Shiuan Chang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://lorraine333.github.io/"><font color="Black"> Xiang Lorraine Li</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.20091</font>, 2025. <font size=-1><a href="https://joeyhou.github.io/CreativityPrism/">[data]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2510.18633"><b>Query Decomposition for RAG: Balancing Exploration-Exploitation.</b></a>  <br />    Roxana Petcu, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Evangelos Kanoulas, Maarten de Rijke, <a href="https://hltcoe.jhu.edu/researcher/dawn-lawrie/"><font color="Black"> Dawn Lawrie</font></a> and <a href="https://scholar.google.com/citations?user=M3BSiiQAAAAJ&amp;hl=en"><font color="Black"> Kevin Duh</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.18633</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -387,6 +391,14 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2307.08775"><b>GEAR: Augmenting Language Models with Generalizable and Efficient Tool Resolution.</b></a>  <br />    <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Haoping Yu and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://github.com/yining610/GEAR">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://hltcoe.jhu.edu/researcher/dawn-lawrie/"><font color="Black"> Dawn Lawrie</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/orionw/according-to">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2406.20092"><b>LLaVolta: Efficient Multi-modal Models via Stage-wise Visual Context Compression.</b></a>  <br />    <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>, Luoxin Ye, Ju He, Zhao-Yang Wang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>. <br />   <font color="DarkRed">Advances in Neural Information Processing Systems (NeurIPS)</font>, 2024. <font size=-1><a href="https://github.com/Beckschen/LLaVolta">[code]</a> <a href="https://beckschen.github.io/llavolta.html">[project]</a></font></p>
 </li>
 </ul>
@@ -432,14 +444,6 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2310.00840"><b>Error Norm Truncation: Robust Training in the Presence of Data Noise for Text Generation Models.</b></a>  <br />    <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <b>Spotlight presentation.🏆</b> <font size=-1><a href="https://youtu.be/tfSkAL3-sWE">[talk]</a> <a href="https://github.com/tianjianl/error_norm_truncation">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2307.08775"><b>GEAR: Augmenting Language Models with Generalizable and Efficient Tool Resolution.</b></a>  <br />    <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Haoping Yu and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://github.com/yining610/GEAR">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://hltcoe.jhu.edu/researcher/dawn-lawrie/"><font color="Black"> Dawn Lawrie</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/orionw/according-to">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -660,7 +664,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-02 13:42:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-07 22:31:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
