--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <td align="left"><p><span style="font-weight: bold; font-size: 125%; line-height: 2.0;">Daniel Khashabi </span> <br />
 Assistant Professor,  <a href="https://www.cs.jhu.edu/">Department of Computer Science</a>,
 <a href="https://jhu.edu/">Johns Hopkins University</a> <br />
-Office: Hackerman Hall 316B <br />
+Office: NE366 at <a href="https://maps.app.goo.gl/cx43YcX5fLKsy7MQ8">Marbury building</a> <br />
 Email: <tt>danielk<img src="https://danielkhashabi.com/files/abababa.png" width="20" height="20" style="margin-bottom: -5px;">jhu.edu</tt> <br /></p>
 <p><p style="margin-bottom:0.1cm;"></p>
 Other affiliations:</p>
@@ -664,7 +664,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-07 22:31:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-12 00:09:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
