--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <td align="left"><p><span style="font-weight: bold; font-size: 125%; line-height: 2.0;">Daniel Khashabi </span> <br />
 Assistant Professor,  <a href="https://www.cs.jhu.edu/">Department of Computer Science</a>,
 <a href="https://jhu.edu/">Johns Hopkins University</a> <br />
-Office: NE366 at <a href="https://maps.app.goo.gl/cx43YcX5fLKsy7MQ8">Marbury building</a> <br />
+Office: NE366, <a href="https://maps.app.goo.gl/cx43YcX5fLKsy7MQ8">Marbury building</a> <br />
 Email: <tt>danielk<img src="https://danielkhashabi.com/files/abababa.png" width="20" height="20" style="margin-bottom: -5px;">jhu.edu</tt> <br /></p>
 <p><p style="margin-bottom:0.1cm;"></p>
 Other affiliations:</p>
@@ -239,7 +239,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2511.12797"><b>Genomic Next-Token Predictors are In-Context Learners.</b></a>  <br />    <a href="https://n8programs.com/"><font color="Black"> Nathan Breslow</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Mahler Revsine, <a href="https://schatz-lab.org/"><font color="Black"> Michael C. Schatz</font></a>, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2511.12797</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/icl-in-genomics-models">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2511.12797"><b>Genomic Next-Token Predictors are In-Context Learners.</b></a>  <br />    <a href="https://github.com/N8python"><font color="Black"> Nathan Breslow</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Mahler Revsine, <a href="https://schatz-lab.org/"><font color="Black"> Michael C. Schatz</font></a>, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2511.12797</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/icl-in-genomics-models">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -664,7 +664,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-12 00:09:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-12 18:25:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
