--- a/index.html
+++ b/index.html
@@ -131,10 +131,6 @@ aligned with human values—enabling trustworthy, AI-driven discovery.</p>
 </body>
 </html>
 </div></div>
-<ul>
-<li><p><a href="https://ai.jhu.edu/careers/postdoctoral-fellowship-program/"><b>Postdoc positions</b></a> &ndash; applications due January 23, 2026.</p>
-</li>
-</ul>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
 <li><p>2025, JHU  MLxAstro/Cosmo Meeting (<a href="https://danielkhashabi.com/files/2025_astro_talk/2025-astro_talk.pdf">slides</a>)</p>
@@ -227,7 +223,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2601.13525"><b>More Than Efficiency: Embedding Compression Improves Domain Adaptation in Dense Retrieval.</b></a>  <br />    Chunsheng Zuo and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2601.13525</font>, 2026. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2601.13525"><b>More Than Efficiency: Embedding Compression Improves Domain Adaptation in Dense Retrieval.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=Uy79AH0AAAAJ&amp;hl=en"><font color="Black"> Chunsheng Zuo</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2601.13525</font>, 2026. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -668,7 +664,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-26 09:56:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-26 13:29:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
