--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2510.09770"><b>Gold Panning: Turning Positional Bias into Signal for Multi-Document LLM Reasoning.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.09770</font>, 2025. <font size=-1></font></p>
+<li><p><a href="http://danielkhashabi.com/files/2026_gold_panning/gold_panning_2026.pdf"><b>Gold Panning: Turning Positional Bias into Signal for Multi-Document LLM Reasoning.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.09770</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -664,7 +664,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-29 09:43:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-31 12:28:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
