--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2602.03814"><b>Conformal Thinking: Risk Control for Reasoning on a Compute Budget.</b></a>  <br />    Xi Wang, Anushri Suresh, <a href="https://scholar.google.com/citations?user=BLkk5kYAAAAJ"><font color="Black"> Alvin Zhang</font></a>, Rishi More, <a href="https://williamjurayj.com/"><font color="Black"> William Jurayj</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, Mehrdad Farajtabar, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://enalisnick.github.io/"><font color="Black"> Eric Nalisnick</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2602.03814</font>, 2026. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2510.18135"><b>World-in-World: World Models in a Closed-Loop World.</b></a>  <br />    Jiahan Zhang, Muqing Jiang, Nanru Dai, <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, Arda Uzunoglu, Shunchi Zhang, Yana Wei, Jiahao Wang, Vishal M. Patel, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Cheng Peng, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://yilundu.github.io/"><font color="Black"> Yilun Du</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2026. <font size=-1><a href="https://world-in-world.github.io/">[project]</a></font></p>
 </li>
 </ul>
@@ -243,7 +247,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="https://pubmed.ncbi.nlm.nih.gov/39868292/"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="DarkRed">The Lancet Digital Health</font>, 2026. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a> <a href="https://www.datatecnica.com/blog/can-gpt-45-claude-37-and-gemini-20-keep-up-with-biomedical-research-a-benchmark-update">[blog]</a></font></p>
+<li><p><a href="https://www.thelancet.com/journals/landig/article/PIIS2589-7500(25)00125-6/fulltext?rss=yes"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="DarkRed">The Lancet Digital Health</font>, 2026. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a> <a href="https://www.datatecnica.com/blog/can-gpt-45-claude-37-and-gemini-20-keep-up-with-biomedical-research-a-benchmark-update">[blog]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -259,7 +263,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="http://danielkhashabi.com/files/2026_gold_panning/gold_panning_2026.pdf"><b>Gold Panning: Turning Positional Bias into Signal for Multi-Document LLM Reasoning.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.09770</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2510.09770"><b>Gold Panning: Turning Positional Bias into Signal for Multi-Document LLM Reasoning.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.09770</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -664,7 +668,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-31 12:28:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-04 18:35:07 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
