--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2602.03814"><b>Conformal Thinking: Risk Control for Reasoning on a Compute Budget.</b></a>  <br />    Xi Wang, Anushri Suresh, <a href="https://scholar.google.com/citations?user=BLkk5kYAAAAJ"><font color="Black"> Alvin Zhang</font></a>, Rishi More, <a href="https://williamjurayj.com/"><font color="Black"> William Jurayj</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, Mehrdad Farajtabar, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://enalisnick.github.io/"><font color="Black"> Eric Nalisnick</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2602.03814</font>, 2026. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2602.03814"><b>Conformal Thinking: Risk Control for Reasoning on a Compute Budget.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=giztudUAAAAJ&amp;hl=en"><font color="Black"> Xi Wang</font></a>, Anushri Suresh, <a href="https://scholar.google.com/citations?user=BLkk5kYAAAAJ"><font color="Black"> Alvin Zhang</font></a>, Rishi More, <a href="https://williamjurayj.com/"><font color="Black"> William Jurayj</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://sites.google.com/view/mehrdad"><font color="Black"> Mehrdad Farajtabar</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://enalisnick.github.io/"><font color="Black"> Eric Nalisnick</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2602.03814</font>, 2026. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -668,7 +668,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-04 18:35:07 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-04 20:30:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
