--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2510.18135"><b>World-in-World: World Models in a Closed-Loop World.</b></a>  <br />    Jiahan Zhang, Muqing Jiang, Nanru Dai, <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, Arda Uzunoglu, Shunchi Zhang, Yana Wei, Jiahao Wang, Vishal M. Patel, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Cheng Peng, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://yilundu.github.io/"><font color="Black"> Yilun Du</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2026. <font size=-1><a href="https://world-in-world.github.io/">[project]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2510.18135"><b>World-in-World: World Models in a Closed-Loop World.</b></a>  <br />    Jiahan Zhang, Muqing Jiang, Nanru Dai, <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, Arda Uzunoglu, Shunchi Zhang, Yana Wei, Jiahao Wang, Vishal M. Patel, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Cheng Peng, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://yilundu.github.io/"><font color="Black"> Yilun Du</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2026. <b>Oral presentation (6% of accepted papers).🏆</b> <font size=-1><a href="https://world-in-world.github.io/">[project]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -668,7 +668,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-04 20:30:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-07 14:27:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
