--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ aligned with human values—enabling trustworthy, AI-driven discovery.</p>
 </ul>
 <p>Our research is driven by a key real application: accelerating <b>scientific discovery</b> in an era where <i>knowledge grows faster than any individual can absorb</i>.</p>
 <p>Most of my research is aligned with the following research communities: <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i> and <i>AI</i>  (COLM, ICLR, NeurIPS, ICML, AAAI, IJCAI).</p>
+<p>Previously, I was a post-doc at Allen Institute for Ai working with <a href="https://yejinc.github.io/">Yejin Choi</a>, <a href="https://hannaneh.ai/">Hannah Hajishirzi</a> and <a href="https://www.cs.cornell.edu/~sabhar/">Ashish Sabhrawal</a>.
+Before my post-doc, I was a graduate student at Penn/UIUC advised by <a href="https://www.cis.upenn.edu/~danroth/">Dan Roth</a>.</p>
 <div class="infoblock">
 <div class="blockcontent">
 <!DOCTYPE html>
@@ -668,7 +670,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-07 14:28:30 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-07 14:32:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
